Prevent share dropdown to jump to the left on smaller screens Fix for owncloud/gallery#329 (cherry picked from commit d79b6e2) (cherry picked from commit d1b8f11)

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ div.crumb.last a {
 	right: 0;
 	margin-right: 0;
 	border-bottom-right-radius: 0;
+	left: auto;
 }
 
 /*Original ribbon design by Comatosed
